--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,169 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.NavbarFlex {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  /* height: 30; */
+  /* padding: 0.2%; */
+}
+
+.tds-icon {
+  width: 130px;
+  /* padding: 1%; */
+  padding-left: 3.5%;
+}
+
+.tds-content1 {
+  /* width: 9%; */
+  /* padding: 1%; */
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.textNav {
+  padding-right: 20px;
+  font-weight: 500;
+}
+
+.tds-content2 {
+  /* width: 9%; */
+  /* padding: 1%; */
+  display: flex;
+  flex-direction: row;
+}
+.SpaceBetween {
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+}
+.textHeader {
+  text-align: center;
+  color: #181b21;
+  font-size: 45px;
+  font-weight: 500;
+  margin-top: 5vh;
+}
+/* INSERT MEDIA QUESRIES HERE */
+
+
+.textSecondary {
+  text-align: center;
+  color: #181b21;
+  font-weight: 500;
+  margin-top: -2vh;
+  text-decoration: underline;
+}
+
+/* INSERT MEDIA QUESRIES HERE */
+
+
+.textSecondary:hover {
+  font-weight: 600;
+}
+/* .mainClass {
+  position: absolute;
+} */
+.FlexButton {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.bottomDiv {
+  margin-top: 50vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-height: 600px) {
+  .bottomDiv {
+    margin-top: 40vh;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media screen and (max-height: 400px) {
+  .bottomDiv {
+    margin-top: 30vh;
   }
+}
+@media screen and (max-height: 250px) {
+  .bottomDiv {
+    margin-top: 10vh;
+  }
+}
+
+
+.ButtonConfig {
+  background-color: rgba(23, 26, 32, 0.8);
+  opacity: 1;
+  color: #fff;
+  border-radius: 50px;
+  border-color: #181b21;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  /* position: relative; */
+  overflow: none;
+  font-size: 12px;
+  margin-right: 10px;
+  font-weight: 600;
+}
+.ButtonCarAvailable {
+  background-color: #fff;
+  opacity: 1;
+  border-radius: 50px;
+  border-color: #fff;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  /* position: relative; */
+  overflow: none;
+  font-size: 12px;
+  margin-left: 10px;
+  font-weight: 600;
+}
+
+.backgroundImage {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.moreInfo {
+  text-align: center;
+  color: #181b21;
+  font-weight: 300;
+  font-size: 15px;
+  margin-top: 5vh;
+  text-decoration: underline;
+}
+.moreInfo:hover {
+  font-weight: 400;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrowDown {
+  width: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.item {
+  display: flex;
+  flex-direction: row;
+  /* width: 100px; */
+  height: 20px;
+  border-radius: 50%;
+  /* margin: 20px; */
+  /* position: relative; */
+  cursor: pointer;
+  flex-shrink: 0;
+  /* flex-direction: column; */
 }
