--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,15 @@
 }
 
 .textNav {
-  padding-right: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-weight: 500;
+  border-radius: 10px;
+}
+.textNav:hover {
+  background-color: rgba(0, 0, 0, 0.06);
 }
 
 .tds-content2 {
@@ -156,7 +163,8 @@
   margin-right: auto;
 }
 .item {
-  display: flex;
+  display: inline;
+  
   flex-direction: row;
   /* width: 100px; */
   height: 20px;
